--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -18,6 +18,9 @@
 .Suggestions {
   position: absolute;
   font-size: 1rem;
-  height: 70vh;
+  height: max-content;
+  max-height: 500px;
+  width: 500px;
+  max-width: 500px;
   overflow-y: scroll;
 }
