--- a/src/components/Sidebar/SidebarOption.css
+++ b/src/components/Sidebar/SidebarOption.css
@@ -2,7 +2,6 @@
   display: flex;
   font-size: 15px;
   align-items: center;
-  padding-left: 2px;
   cursor: pointer;
   padding: 9px 12px;
 }
